--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,7 @@ jobs:
       # Run as a mlflow project
       - name: Run mlflow project
         run: |
+          cd MLProject
           mlflow run MLproject --env-manager=local 
       
       # Get latest run_id
