--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
       - name: Check Env
         run: |
           echo $CSV_URL
+          
       # Install mlflow
       - name: Install dependencies
         run: |
@@ -39,7 +40,9 @@ jobs:
       # Run as a mlflow project
       - name: Run mlflow project
         run: |
-          mlflow run MLproject --env-manager=local 
+          rm -rf .git
+          cd MLProject
+          mlflow run . --no-conda --env-manager=local
       
       # Get latest run_id
       - name: Get latest MLflow run_id
