--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
         run: |
           rm -rf .git
           cd MLProject
-          mlflow run . --no-conda --env-manager=local
+          mlflow run . --env-manager=local
       
       # Get latest run_id
       - name: Get latest MLflow run_id
