--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,10 +40,7 @@ jobs:
       # Run as a mlflow project
       - name: Run mlflow project
         run: |
-          rm -rf .git
-          cd MLProject
-          mlflow run . --env-manager=local
-          cd ..
+          mlflow run MLproject --env-manager=local 
       
       # Get latest run_id
       - name: Get latest MLflow run_id
