--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,10 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    
+    permissions:
+          contents: write
+          
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE
       - uses: actions/checkout@v3
@@ -35,7 +38,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install mlflow  
+          pip install mlflow==2.19.0
           
       # Run as a mlflow project
       - name: Run mlflow project
@@ -45,13 +48,25 @@ jobs:
       # Get latest run_id
       - name: Get latest MLflow run_id
         run: |
-          RUN_ID=$(ls -td mlruns/0/*/ | head -n 1 | cut -d'/' -f3)
+          LATEST_PATH=$(ls -td MLProject/mlruns/0/*/ | head -n 1)
+          RUN_ID=$(basename "$LATEST_PATH")
+          
           echo "RUN_ID=$RUN_ID" >> $GITHUB_ENV
           echo "Latest run_id: $RUN_ID"
+
+      # Upload to GitHub
+      - name: Upload to GitHub
+        run: |
+          git config --global user.name "botCI"
+          git config --global user.email "botCI@gmail.com"
+          git add MLProject/mlruns
+          git commit -m "Automatic Add training artifacts (Run ID: $RUN_ID) [skip ci]"
+          git push
           
       # Build Docker Model
       - name: Build Docker Model
         run: |
+          export MLFLOW_TRACKING_URI=file://$(pwd)/MLProject/mlruns
           mlflow models build-docker --model-uri "runs:/$RUN_ID/model" --name "airline_passenger_satisfaction"
 
       # Login to Docker Hub
