--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,8 @@ jobs:
       # Run as a mlflow project
       - name: Run mlflow project
         run: |
-          mlflow run MLProject --env-manager=local 
+          cd MLProject
+          mlflow run . --env-manager=local 
       
       # Get latest run_id
       - name: Get latest MLflow run_id
